feat : 응답/요청에 대한 로그 Filter 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,10 @@ spring:
       hibernate.jdbc.time_zone: UTC
 server:
   port: 8087
+
+logging:
+  level:
+    kr.hhplus.be.server.Filter.LoggingFilter: INFO
 ---
 spring.config.activate.on-profile: local, test
 
